# pdfmagic

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
docs/superpowers/plans/: 2026-07-15-pdfbetter-implementation.md  2026-07-16-rasterize-upscale-mode-implementation.md
docs/superpowers/specs/: 2026-07-15-pdfbetter-design.md  2026-07-16-rasterize-upscale-mode-design.md
inspiration/: cut.py  upscale.py
scripts/: add_to_user_path.ps1
src/pdfbetter/: audit.py  classify.py  cli.py  color.py  crop.py  edit.py  geometry.py  pipeline.py  rasterize.py  rasterize_upscale_pipeline.py  upscale.py  walk.py
tests/: conftest.py  test_audit.py  test_classify.py  test_cli.py  test_color.py  test_crop.py  test_edit.py  test_geometry.py  test_package.py  test_pipeline.py  test_rasterize.py  test_rasterize_upscale_pipeline.py  test_upscale.py  test_walk.py
