[project]
name = "pdfbetter"
version = "0.1.0"
description = "Strip ink-heavy backgrounds from a PDF while keeping text, images, and lines exactly as they were."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pikepdf>=9.0",
]

[project.scripts]
pdfbetter = "pdfbetter.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "reportlab>=4.0",
    "pillow>=10.0",
    "pdfplumber>=0.11",
    "pypdfium2>=4.0",
]
rasterize = [
    "pypdfium2>=4.0",
    "pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfbetter"]
